# Yolov5OnOpenVINO

./: CMakeLists.txt  Yolov5Detector.cpp  Yolov5Detector.h  main.cpp
